# q

./: .gitignore  ChangeLog.md  default.nix  flake.nix  ghcid  package.yaml  q.cabal  runelevated  stack.yaml
app/: Main.hs
scripts/: Script.hs
src/: Cli.hs
src/Q/: AlarmClock.hs  Cli.hs  Dashboard.hs  G815.hs  Home.hs  Interface.hs  Mqtt.hs  Pinephone.hs  Pomodoro.hs  System.hs  VT.hs  Wallpaper.hs
src/Q/Hardware/: BeatStep.hs  G815.hs
src/Q/Mqtt/: Zigbee2Mqtt.hs
